@@ -5,8 +5,20 @@
 
   <groupId>org.terasoluna.app</groupId>
   <artifactId>terasoluna-tourreservation</artifactId>
-  <version>5.5.0-SNAPSHOT</version>
+  <version>5.5.1-SNAPSHOT</version>
   <packaging>pom</packaging>
+  <modules>
+    <module>terasoluna-tourreservation-env</module>
+    <module>terasoluna-tourreservation-domain</module>
+    <module>terasoluna-tourreservation-web</module>
+  </modules>
+  <parent>
+    <groupId>org.terasoluna.gfw</groupId>
+    <artifactId>terasoluna-gfw-parent</artifactId>
+    <version>5.5.1-SNAPSHOT</version>
+    <relativePath />
+  </parent>
+
   <name>TERASOLUNA Server Framework for Java (5.x) - Tour Reservation Application - Parent</name>
   <description>Parent POM of Tour Reservation Application using TERASOLUNA Server Framework for Java (5.x)</description>
   <url>http://terasoluna.org</url>
@@ -22,13 +34,6 @@
     <name>TERASOLUNA Framework</name>
     <url>http://terasoluna.org</url>
   </organization>
-
-  <parent>
-    <groupId>org.terasoluna.gfw</groupId>
-    <artifactId>terasoluna-gfw-parent</artifactId>
-    <version>5.5.0-SNAPSHOT</version>
-    <relativePath />
-  </parent>
 
   <repositories>
     <repository>
@@ -282,16 +287,25 @@
         <version>${webdrivermanager.version}</version>
       </dependency>
       <!-- == End Test == -->
-      <!-- == Begin Lombok == -->
-      <!-- Workaround to Lombok bug(see https://github.com/terasolunaorg/terasoluna-tourreservation/issues/585).
-           We will remove the version definition with the following ISSUE.
-           https://github.com/terasolunaorg/terasoluna-tourreservation/issues/588 -->
+
+      <!-- == Begin For JDK 11 == -->
       <dependency>
-        <groupId>org.projectlombok</groupId>
-        <artifactId>lombok</artifactId>
-        <version>${lombok.version}</version>
+        <groupId>javax.annotation</groupId>
+        <artifactId>javax.annotation-api</artifactId>
+        <version>${javax.annotation-api.version}</version>
       </dependency>
-      <!-- == End Lombok == -->
+      <dependency>
+        <groupId>com.sun.xml.bind</groupId>
+        <artifactId>jaxb-core</artifactId>
+        <version>${jaxb-core.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.sun.xml.bind</groupId>
+        <artifactId>jaxb-impl</artifactId>
+        <version>${jaxb-impl.version}</version>
+      </dependency>
+      <!-- == End For JDK 11 == -->
+
     </dependencies>
   </dependencyManagement>
   <properties>
@@ -304,17 +318,41 @@
     <!-- == Dependency Versions == -->
     <postgresql.version>42.2.4</postgresql.version>
     <jasperreports.version>3.5.1</jasperreports.version>
-    <lombok.version>1.18.2</lombok.version>
     <selenium.version>3.0.1</selenium.version>
     <webdrivermanager.version>1.6.2</webdrivermanager.version>
+    <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
+    <jaxb-core.version>2.3.0.1</jaxb-core.version>
+    <jaxb-impl.version>2.3.2</jaxb-impl.version>
     <!-- == Project Properties == -->
     <encoding>UTF-8</encoding>
     <java-version>1.8</java-version>
     <project.root.basedir>${project.basedir}</project.root.basedir>
   </properties>
-  <modules>
-    <module>terasoluna-tourreservation-env</module>
-    <module>terasoluna-tourreservation-domain</module>
-    <module>terasoluna-tourreservation-web</module>
-  </modules>
+  <profiles>
+    <profile>
+      <id>jdk11</id>
+      <activation>
+        <jdk>11</jdk>
+      </activation>
+      <properties>
+        <java-version>11</java-version>
+        <cargo.jvmargs>-Xms512m -Xmx1024m -Djava.locale.providers=COMPAT,CLDR,SPI</cargo.jvmargs>
+      </properties>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration>
+                <systemProperties>
+                  <jdk.tls.client.protocols>TLSv1.2</jdk.tls.client.protocols>
+                </systemProperties>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
+  </profiles>
 </project>
